[tool.poetry]
name = "stockbot"
version = "0.1.0"
description = ""
authors = ["spangzach <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
alpaca-trade-api = "^1.4.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
